--- a/src/assets/themes/bootstrap/_theme.scss
+++ b/src/assets/themes/bootstrap/_theme.scss
@@ -3,3 +3,61 @@
 
 // Add any custom code here
 // ...
+
+// Adaptive button that uses light styles in light mode and dark styles in dark mode
+[data-bs-theme="light"] .btn-adaptive {
+  @extend .btn-dark;
+}
+
+[data-bs-theme="dark"] .btn-adaptive {
+  @extend .btn-light;
+}
+
+// Do the same for btn-outline-light, btn-outline-dark,
+[data-bs-theme="light"] .btn-outline-adaptive {
+  @extend .btn-outline-dark;
+}
+
+[data-bs-theme="dark"] .btn-outline-adaptive {
+  @extend .btn-outline-light;
+}
+
+// If nav-link is active, give it an underline
+.nav-link.active {
+  text-decoration: underline !important;
+}
+
+// Make a link-muted class that looks like text-muted
+.link-muted {
+  --bs-text-opacity: 1;
+  color: var(--bs-secondary-color) !important;
+  text-decoration: none;
+  transition: opacity 0.15s ease-in-out;
+
+  &:hover,
+  &:focus {
+    color: var(--bs-secondary-color) !important;
+    text-decoration: underline;
+    opacity: 0.75;
+  }
+}
+
+// Padding - Extend to p-8
+$spacer: 1rem;
+@for $i from 6 through 8 {
+  $size: if($i == 6, 4, if($i == 7, 4.5, 5));
+  
+  .p-#{$i} { padding: $spacer * $size !important; }
+  .pt-#{$i} { padding-top: $spacer * $size !important; }
+  .pb-#{$i} { padding-bottom: $spacer * $size !important; }
+  .ps-#{$i} { padding-left: $spacer * $size !important; }
+  .pe-#{$i} { padding-right: $spacer * $size !important; }
+  .px-#{$i} { 
+    padding-left: $spacer * $size !important;
+    padding-right: $spacer * $size !important;
+  }
+  .py-#{$i} { 
+    padding-top: $spacer * $size !important;
+    padding-bottom: $spacer * $size !important;
+  }
+}
