--- a/src/assets/themes/bootstrap/_theme.scss
+++ b/src/assets/themes/bootstrap/_theme.scss
@@ -196,20 +196,37 @@ $theme-colors: (
   }
 }
 
-/* Blog post image height only - using Bootstrap's object-fit-cover class */
-.blog-post-image {
+/* Blog post card image height only - using Bootstrap's object-fit-cover class */
+.blog-post-card-image {
   height: 240px;
   width: 100%;
 }
 
 @media (max-width: 991.98px) {
-  .blog-post-image {
+  .blog-post-card-image {
     height: 240px;
   }
 }
 
 @media (max-width: 575.98px) {
-  .blog-post-image {
+  .blog-post-card-image {
     height: 200px;
+  }
+}
+
+/* Blog post image height only - using Bootstrap's object-fit-cover class */
+.blog-post-image {
+  max-height: 480px;
+  width: 100%;
+}
+
+@media (max-width: 991.98px) {
+  .blog-post-image {
+    max-height: 360px;
+  }
+}
+@media (max-width: 575.98px) {
+  .blog-post-image {
+    max-height: 240px;
   }
 }
