--- a/src/assets/css/pages/download/index.scss
+++ b/src/assets/css/pages/download/index.scss
@@ -42,7 +42,7 @@
   svg {
     opacity: 0.4;
     fill: white;
-    
+
     path {
       fill: white;
     }
@@ -90,11 +90,11 @@
   0% {
     transform: translate(60px, -20px);
   }
-  30% {
+  20%, 80% {
     transform: translate(0, 0);
   }
-  100% {
-    transform: translate(0, 0);
+  81%, 100% {
+    transform: translate(60px, -20px);
   }
 }
 
@@ -158,7 +158,7 @@
 .app-icon {
   width: 100px;
   height: 100px;
-  
+
   .brandmark {
     width: 64px;
     height: 64px;
@@ -175,5 +175,72 @@
   50% {
     transform: scale(1);
     opacity: 1;
+  }
+}
+
+// Drag indicator animation for Mac drag-to-Applications
+.drag-indicator {
+  pointer-events: none;
+  z-index: 10;
+
+  .pointer-icon {
+    width: 48px;
+    height: 48px;
+    animation: mouse-drag 3s ease-in-out infinite;
+    position: relative;
+    z-index: 11;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .click-pulse {
+    width: 30px;
+    height: 30px;
+    top: -2px;
+    left: -2px;
+    animation: drag-click-pulse 3s ease-in-out infinite;
+    opacity: 0;
+    z-index: 10;
+  }
+}
+
+@keyframes mouse-drag {
+  0%, 10% {
+    transform: translate(0, 0);
+  }
+  40% {
+    transform: translate(200px, 0);
+  }
+  40%, 60% {
+    transform: translate(200px, 0);
+  }
+  61%, 100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes drag-click-pulse {
+  0%, 3% {
+    opacity: 0;
+    transform: translate(0, 0) scale(0.5);
+  }
+  7%, 10% {
+    opacity: 0.6;
+    transform: translate(0, 0) scale(1);
+  }
+  40% {
+    opacity: 0.6;
+    transform: translate(200px, 0) scale(1);
+  }
+  45%, 55% {
+    opacity: 0.8;
+    transform: translate(200px, 0) scale(1.3);
+  }
+  60%, 100% {
+    opacity: 0;
+    transform: translate(200px, 0) scale(0.5);
   }
 }
