--- a/src/assets/themes/classy/css/base/_spacing.scss
+++ b/src/assets/themes/classy/css/base/_spacing.scss
@@ -27,6 +27,11 @@ $spacer: 1rem;
 // ============================================
 // VH classes
 // ============================================
+// Height utilities using viewport height (vh) units
 .vh-50 { height: 50vh !important; }
 
+// Min-Height utilities using viewport height (vh) units
 .min-vh-50 { min-height: 50vh !important; }
+.min-vh-75 { min-height: 75vh !important; }
+.min-vh-80 { min-height: 80vh !important; }
+.min-vh-100 { min-height: 100vh !important; }
