--- a/src/assets/themes/classy/css/components/_buttons.scss
+++ b/src/assets/themes/classy/css/components/_buttons.scss
@@ -339,3 +339,22 @@
 //   //   color: $dark !important;
 //   // }
 // }
+
+// ============================================
+// Gradient Rainbow Button
+// ============================================
+.btn-gradient-rainbow {
+  border-width: 0 !important;
+  border-color: transparent !important;
+  background-color: transparent !important;
+  background-image: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82) !important;
+  background-size: 300% 300% !important;
+  text-transform: none !important;
+  color: rgba(255, 255, 255, 1) !important;
+  box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06) !important;
+  transition-duration: 0.3s !important;
+
+  &:hover {
+    opacity: 0.70;
+  }
+}
