--- a/src/assets/themes/classy/css/base/_spacing.scss
+++ b/src/assets/themes/classy/css/base/_spacing.scss
@@ -34,4 +34,5 @@ $spacer: 1rem;
 .min-vh-50 { min-height: 50vh !important; }
 .min-vh-75 { min-height: 75vh !important; }
 .min-vh-80 { min-height: 80vh !important; }
+.min-vh-90 { min-height: 90vh !important; }
 .min-vh-100 { min-height: 100vh !important; }
