--- a/src/assets/themes/classy/css/components/_text.scss
+++ b/src/assets/themes/classy/css/components/_text.scss
@@ -5,7 +5,7 @@
 // Gradient Text Styles
 // ============================================
 .text-gradient-rainbow {
-  background-image: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  background-image: $classy-gradient-rainbow;
   background-size: 300% 300%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -13,7 +13,8 @@
 }
 
 .text-gradient-aurora {
-  background: $classy-gradient-aurora;
+  background-image: $classy-gradient-aurora;
+  background-size: 300% 300%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
