--- a/src/assets/themes/classy/css/base/_borders.scss
+++ b/src/assets/themes/classy/css/base/_borders.scss
@@ -23,7 +23,7 @@
     position: absolute;
     inset: -3px;
     border-radius: inherit;
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+    background: $classy-gradient-rainbow;
     background-size: 300% 300%;
     z-index: -1;
   }
