--- a/src/assets/themes/classy/css/components/_buttons.scss
+++ b/src/assets/themes/classy/css/components/_buttons.scss
@@ -361,7 +361,7 @@
   border-width: 0 !important;
   border-color: transparent !important;
   background-color: transparent !important;
-  background-image: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82) !important;
+  background-image: $classy-gradient-rainbow !important;
   background-size: 300% 300% !important;
   text-transform: none !important;
   color: rgba(255, 255, 255, 1) !important;
