--- a/src/assets/css/ultimate-jekyll-manager.scss
+++ b/src/assets/css/ultimate-jekyll-manager.scss
@@ -1,4 +1,5 @@
-// Import the theme from src/assets/themes/{ id }
+// Forward the theme (allows consuming project to configure it)
+@forward 'theme';
 @use 'theme' as *;
 
 // Vendor styles
