--- a/src/assets/themes/classy/css/base/_borders.scss
+++ b/src/assets/themes/classy/css/base/_borders.scss
@@ -15,13 +15,14 @@
 // Gradient Borders
 // ============================================
 .border-gradient-rainbow {
+  --bs-border-width: 3px;
   position: relative;
   border: none !important;
 
   &::before {
     content: "";
     position: absolute;
-    inset: -3px;
+    inset: calc(var(--bs-border-width) * -1);
     border-radius: inherit;
     background: $classy-gradient-rainbow;
     background-size: 300% 300%;
@@ -36,6 +37,14 @@
     background: inherit;
     z-index: -1;
   }
+
+  // Override Bootstrap border width classes to work with gradient border
+  &.border-0 { --bs-border-width: 0; }
+  &.border-1 { --bs-border-width: 1px; }
+  &.border-2 { --bs-border-width: 2px; }
+  &.border-3 { --bs-border-width: 3px; }
+  &.border-4 { --bs-border-width: 4px; }
+  &.border-5 { --bs-border-width: 5px; }
 }
 
 // ============================================
