--- a/src/assets/themes/classy/css/components/_text.scss
+++ b/src/assets/themes/classy/css/components/_text.scss
@@ -21,6 +21,15 @@
 }
 
 // ============================================
+// Accent Font
+// ============================================
+.text-accent {
+  font-family: $classy-font-accent;
+  font-weight: inherit;
+  font-style: italic;
+}
+
+// ============================================
 // Adaptive Text Colors
 // ============================================
 .text-adaptive {
