--- a/src/assets/themes/classy/css/layout/_general.scss
+++ b/src/assets/themes/classy/css/layout/_general.scss
@@ -41,3 +41,21 @@ main {
     margin-top: -3.5rem;
   }
 }
+
+// Nearly full width (with padding on left/right)
+.section-nearly-full-width {
+  margin-left: calc(-50vw + 50% + 0.25rem);
+  margin-right: calc(-50vw + 50% + 0.25rem);
+  width: calc(100vw - 0.5rem);
+  margin-top: -6rem;
+
+  @media (min-width: 992px) {
+    margin-top: -3.5rem;
+  }
+
+  @media (min-width: 1200px) {
+    margin-left: calc(-50vw + 50% + 1rem);
+    margin-right: calc(-50vw + 50% + 1rem);
+    width: calc(100vw - 2rem);
+  }
+}
