--- a/src/assets/css/core/utilities.scss
+++ b/src/assets/css/core/utilities.scss
@@ -40,7 +40,7 @@ button *, a * {
 
 // Filter black
 .filter-black {
-  filter: brightness(0) invert(1) hue-rotate(180deg);
+  filter: brightness(0);
 }
 
 // ============================================
